--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.3",
+    "boxicons": "^2.1.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
