--- a/manifest.json
+++ b/manifest.json
@@ -8,10 +8,29 @@
     "theme_color": "#086BBE",
     "orientation": "portrait",
     "icons": [
-      {
-        "src": "./src/Icon/FortniteInfo_Icon.png",
+        {
+            "src": "icons/manifest-icon-192.maskable.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any"
+          },
+        {
+        "src": "icons/manifest-icon-192.maskable.png",
+        "sizes": "192x192",
+        "type": "image/png",
+        "purpose": "maskable"
+        },
+        {
+        "src": "icons/manifest-icon-512.maskable.png",
         "sizes": "512x512",
-        "type": "image/png"
-      }
+        "type": "image/png",
+        "purpose": "any"
+        },
+        {
+        "src": "icons/manifest-icon-512.maskable.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "purpose": "maskable"
+        }
     ]
    }
