--- a/manifest.json
+++ b/manifest.json
@@ -1,36 +1,42 @@
 {
-    "name": "FortniteInfo",
-    "short_name": "FortniteInfo",
-    "description": "FortniteInfo is a website that shows users Fortnite's current map images (with and without POIS), current Battle Royale, Save The World, and Creative News, and the current shop items (bundles and individual items). FortniteInfo also has a creator code page that checks whether a code is a valid creator code or not.",
-    "start_url": "/",
-    "display": "fullscreen",
-    "background_color": "#086BBE",
-    "theme_color": "#086BBE",
-    "orientation": "portrait",
-    "icons": [
-        {
-            "src": "icons/manifest-icon-192.maskable.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any"
-          },
-        {
-        "src": "icons/manifest-icon-192.maskable.png",
-        "sizes": "192x192",
-        "type": "image/png",
-        "purpose": "maskable"
-        },
-        {
-        "src": "icons/manifest-icon-512.maskable.png",
-        "sizes": "512x512",
-        "type": "image/png",
-        "purpose": "any"
-        },
-        {
-        "src": "icons/manifest-icon-512.maskable.png",
-        "sizes": "512x512",
-        "type": "image/png",
-        "purpose": "maskable"
-        }
-    ]
-   }
+  "name": "FortniteInfo",
+  "short_name": "FortniteInfo",
+  "description": "FortniteInfo is a website that shows users Fortnite's current map images (with and without POIS), current Battle Royale, Save The World, and Creative News, and the current shop items (bundles and individual items). FortniteInfo also has a creator code page that checks whether a code is a valid creator code or not.",
+  "start_url": "/",
+  "display": "fullscreen",
+  "background_color": "#086BBE",
+  "theme_color": "#086BBE",
+  "orientation": "portrait",
+  "icons": [
+    {
+      "src": "icons/manifest-icon-144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "icons/manifest-icon-192.maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "icons/manifest-icon-192.maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "icons/manifest-icon-512.maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "icons/manifest-icon-512.maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ]
+}
