--- a/manifest.json
+++ b/manifest.json
@@ -9,31 +9,31 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icons/manifest-icon-144.png",
+      "src": "/src/assets/icons/manifest-icon-144.png",
       "sizes": "144x144",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/manifest-icon-192.maskable.png",
+      "src": "/src/assets/icons/manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/manifest-icon-192.maskable.png",
+      "src": "/src/assets/icons/manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "icons/manifest-icon-512.maskable.png",
+      "src": "/src/assets/icons/manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/manifest-icon-512.maskable.png",
+      "src": "/src/assets/icons/manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
